<resources>
    <string name="app_name">Audio Mail</string>

    <string name="home">Home</string>
    <string name="recipient">Recipient</string>
    <string name="subject">Subject</string>
    <string name="send">Send</string>
    <string name="body">Body</string>
    <string name="command_button">command button</string>

    <!--     Home-->
    <string name="welcome_">Welcome</string>
    <string name="home_explanation_header">AudioMail helps you send mails completely via audio. To begin, click on the button at the bottom center, and say:</string>
    <string name="home_instruction_one"><b>One</b>, to enter Recipients Address.</string>
    <string name="home_instruction_two"><b>Two</b>, to enter the Mail subject</string>
    <string name="home_instruction_three"><b>Three</b>, to enter the Message Body.</string>
    <string name="home_instruction_four"><b>Four</b>, to see the mail summary and send the mail.</string>
    <string name="home_instruction_five"><b>Five</b>, to go to gmail registration page</string>
    <string name="home_instruction_six"><b>Six</b>, to see mail inbox</string>
    <string name="home_instruction_seven"><b>Seven</b>, to repeat the instructions.</string>

    <!--    Mail Recipient-->
    <string name="mail_recipient">Mail Recipient</string>
    <string name="mail_recipient_explanation">Clicking on the button at the bottom left, you can read out the recipient\'s address, clicking on the button on the bottom right, you can say the commands. Say:</string>
    <string name="mail_recipient_instruction_one"><b>One</b>, to read out what you\'ve wrote.</string>
    <string name="mail_recipient_instruction_two"><b>Two</b>, to clear what you\'ve wrote.</string>
    <string name="mail_recipient_instruction_three"><b>Three</b>, to go to the next section.</string>
    <string name="mail_recipient_instruction_four"><b>Four</b>, to repeat the instructions.</string>

    <!--    Mail Subject-->
    <string name="mail_subject">Mail Subject</string>
    <string name="mail_subject_explanation">Clicking on the button at the bottom left, you can read out the mail subject, clicking on the button on the bottom right, you can say the commands. Say:</string>
    <string name="mail_subject_instruction_one"><b>One</b>, to read out what you\'ve wrote.</string>
    <string name="mail_subject_instruction_two"><b>Two</b>, to clear what you\'ve wrote.</string>
    <string name="mail_subject_instruction_three"><b>Three</b>, to go to the next section.</string>
    <string name="mail_subject_instruction_four"><b>Four</b>, to repeat the instructions.</string>

    <!--    Mail Body-->
    <string name="mail_body">Mail Body</string>
    <string name="mail_body_explanation">Clicking on the button at the bottom left, you can read out the message body, clicking on the button on the bottom right, you can say the commands. Say:</string>
    <string name="mail_body_instruction_one"><b>One</b>, to read out what you\'ve wrote.</string>
    <string name="mail_body_instruction_two"><b>Two</b>, to clear what you\'ve wrote.</string>
    <string name="mail_body_instruction_three"><b>Three</b>, to go to the next section.</string>
    <string name="mail_body_instruction_four"><b>Four</b>, to repeat the instructions.</string>

    <!--    Mail Summary Send-->
    <string name="mail_summarysend">Mail Summary/Send</string>
    <string name="mail_summarysend_explanation">Clicking on the button at the bottom center, Say:</string>
    <string name="mail_summarysend_instruction_one"><b>One</b>, to read out the summary of your mail.</string>
    <string name="mail_summarysend_instruction_two"><b>Two</b>, to clear all mail information.</string>
    <string name="mail_summarysend_instruction_three"><b>Three</b>, to send mail.</string>
    <string name="mail_summarysend_instruction_four"><b>Four</b>, to repeat the instructions.</string>
    <string name="mail_summarysend_instruction_five"><b>Five</b>, to go back to home page.</string>

    <!--    Mail inbox-->
    <string name="inbox_instruction_one"><b>One</b>, to read out the mail body of last read out mail.</string>
    <string name="inbox_instruction_two"><b>Two</b>, to go back to the home page.</string>
    <string name="inbox_instruction_three"><b>Three</b>, to repeat the instructions.</string>

    <string name="speak_the_recipient_s_address">Speak the recipient\'s address</string>
    <string name="speak_the_mail_s_subject">Speak the mail subject</string>
    <string name="speak_the_mail_body">Speak the Mail body</string>


    <!--    Text to Speech-->
    <!--    Text to Speech-->
    <!--    Text to Speech-->
    <string name="home_tts">Welcome to the home page.
    AudioMail helps you send mails completely via audio. To begin, click on the button at the bottom center, and say:
    One, to enter Recipients Address.
    Two, to enter the mail subject.
    Three, to enter the Message Body.
    Four, to see the mail summary and send the mail.
    Five, to go to gmail registration page.
    Six, to see mail inbox.
    Seven, to repeat the instructions.</string>

    <string name="mail_recipient_tts">Mail Recipient page.
    Clicking on the button at the bottom left, you can read out the recipient\'s address, using the button on the bottom right, you can say the commands. Say:
    One, to read out what you\'ve wrote.
    Two, to clear what you\'ve wrote.
    Three, to go back to main page.
    Four, to repeat the instructions.</string>
    <string name="mail_subject_tts">Mail Subject page.
    Clicking on the button at the bottom left, you can read out the mail subject, using the button on the bottom right, you can say the commands. Say:
    One, to read out what you\'ve wrote.
    Two, to clear what you\'ve wrote.
    Three, to go back to main page.
    Four, to repeat the instructions.
    </string>
    <string name="mail_body_tts">Mail Body page.
    Clicking on the button at the bottom left, you can read out the message body, using the button on the bottom right, you can say the commands. Say:
    One, to read out what you\'ve wrote.
    Two, to clear what you\'ve wrote.
    Three, to go back to main page.
    Four, to repeat the instructions.</string>

    <string name="mail_summarysend_tts">Mail Summary-Send page.
    Clicking on the button at the bottom center, Say:
    One, to read out the summary of your mail.
    Two, to clear all mail information.
    Three, to send mail.
    Four, to repeat the instructions.
    Five, to go back to home page.
    </string>

    <string name="inbox_tts">
        Welcome to your mail inbox.
        There are two buttons at the bottom of this page. One on the left bottom and one on the right bottom. You can click on the button at the bottom left
        to read out your mails one by one, sequentially. Clicking on the button at the bottom right, Say:
        One, to read out the body of the message that was read out to you last.
        Two, to go back to the home page.
        Three, to repeat the instructions.
    </string>
    <string name="unknown_command">Unknown command</string>
    <string name="register_title">Register your Gmail account</string>
    <string name="gmail_address">Gmail address</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="first_run_prefs">first_run_prefs</string>
    <string name="gmail_credentials_shared_prefs">gmail_credentials_shared_prefs</string>
    <string name="firstrun">firstrun</string>
    <string name="edit_gmail_credentials">Edit Gmail Credentials</string>
    <string name="gmailaddress">gmailaddress</string>
    <string name="gmailpassword">gmailpassword</string>
    <string name="to_enable_this_app_access_your_mail_follow_this_link_to_grant_access">*To enable this app access your mail, follow this link to grant access.</string>
</resources>
