<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:padding="25dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:fontFamily="@font/cera_round_pro_black"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/gmail_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/message_body_background"
        android:lines="1"
        android:textSize="20sp"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:fontFamily="@font/cera_round_pro_medium"
        android:layout_marginTop="50dp"
        android:hint="@string/gmail_address"
        android:textColor="@color/colorPrimaryDark"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/gmail_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/message_body_background"
        android:lines="1"
        android:textSize="20sp"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:fontFamily="@font/cera_round_pro_medium"
        android:layout_marginTop="15dp"
        android:hint="@string/password"
        android:textColor="@color/colorPrimaryDark"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textAllCaps="false"
        android:background="@drawable/save_btn_bg"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:fontFamily="@font/cera_round_pro_medium"
        android:layout_marginTop="50dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"/>

    <TextView
        android:id="@+id/allow_less_secure_apps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_enable_this_app_access_your_mail_follow_this_link_to_grant_access"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:fontFamily="@font/cera_round_pro_regular"
        android:layout_gravity="center"
        android:layout_marginTop="30sp"/>


</LinearLayout>