<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SummarySendFragment"
    android:orientation="vertical"
    android:padding="23dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mail_summarysend"
        android:fontFamily="@font/cera_round_pro_black"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mail_summarysend_explanation"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/dark_blue"
        android:fontFamily="@font/cera_round_pro_bold"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/ic_one"
                android:drawablePadding="15dp"
                android:fontFamily="@font/cera_round_pro_regular"
                android:gravity="center_vertical"
                android:text="@string/mail_summarysend_instruction_one"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="17sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_two"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/mail_summarysend_instruction_two"
                android:gravity="center_vertical"
                android:drawablePadding="15dp"
                android:textSize="17sp"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/cera_round_pro_regular"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/ic_three"
                android:drawablePadding="15dp"
                android:fontFamily="@font/cera_round_pro_regular"
                android:gravity="center_vertical"
                android:text="@string/mail_summarysend_instruction_three"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="17sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/ic_four"
                android:drawablePadding="15dp"
                android:gravity="center_vertical"
                android:text="@string/mail_summarysend_instruction_four"
                android:textSize="17sp"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/cera_round_pro_regular"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:id="@+id/summarysend_instruction_button"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_instruction"
                android:contentDescription="@string/command_button"
                android:background="@drawable/circular_background"
                android:padding="25dp"
                android:elevation="2dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>