<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SubjectFragment"
    android:orientation="vertical"
    android:padding="23dp">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/mail_cc_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/message_body_background"
                android:lines="1"
                android:textSize="20sp"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:fontFamily="@font/cera_round_pro_medium"
                android:layout_marginTop="30dp"
                android:hint="@string/speak_the_mail_s_subject"
                android:textColor="@color/colorPrimaryDark"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/light_grey"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                />

            <TextView
                style="@style/page_instruction_style"
                android:text="@string/mail_subject_explanation"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/ic_one"
                android:drawablePadding="15dp"
                android:fontFamily="@font/cera_round_pro_regular"
                android:gravity="center_vertical"
                android:text="@string/mail_subject_instruction_one"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="17sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_two"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/mail_subject_instruction_two"
                android:gravity="center_vertical"
                android:drawablePadding="15dp"
                android:textSize="17sp"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/cera_round_pro_regular"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/ic_three"
                android:drawablePadding="15dp"
                android:fontFamily="@font/cera_round_pro_regular"
                android:gravity="center_vertical"
                android:text="@string/mail_subject_instruction_three"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="17sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/ic_four"
                android:drawablePadding="15dp"
                android:gravity="center_vertical"
                android:text="@string/mail_subject_instruction_four"
                android:textSize="17sp"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/cera_round_pro_regular"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:id="@+id/cc_read_out_button"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_record"
                android:contentDescription="@string/command_button"
                android:background="@drawable/circular_background"
                android:padding="25dp"
                android:elevation="2dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:id="@+id/cc_instruction_button"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_instruction"
                android:contentDescription="@string/command_button"
                android:background="@drawable/circular_background"
                android:padding="25dp"
                android:elevation="2dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>