<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".inbox.InboxActivity"
    android:padding="23dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/back_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back"/>
            <TextView
                android:id="@+id/inboxes_no"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Inbox(0)"
                android:fontFamily="@font/cera_round_pro_bold"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="22sp"
                android:gravity="center"
                android:layout_marginEnd="24dp"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/inboxes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:drawableStart="@drawable/ic_one"
            android:drawablePadding="15dp"
            android:fontFamily="@font/cera_round_pro_regular"
            android:gravity="center_vertical"
            android:text="@string/inbox_instruction_one"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="17sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_two"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/inbox_instruction_two"
            android:gravity="center_vertical"
            android:drawablePadding="15dp"
            android:textSize="17sp"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="@font/cera_round_pro_regular"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_three"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/inbox_instruction_three"
            android:gravity="center_vertical"
            android:drawablePadding="15dp"
            android:textSize="17sp"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="@font/cera_round_pro_regular"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:id="@+id/inbox_read_mail_btn"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_record"
                android:contentDescription="@string/command_button"
                android:background="@drawable/circular_background"
                android:padding="25dp"
                android:elevation="2dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:id="@+id/inbox_instruction_button"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_instruction"
                android:contentDescription="@string/command_button"
                android:background="@drawable/circular_background"
                android:padding="25dp"
                android:elevation="2dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>